# esp-idf-project-template

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  Makefile  README.md  sanitize_compile_db.py  sanitize_compile_db.sh  sdkconfig.defaults
.github/disabled_workflows/: host-checks.yml
.github/workflows/: esp-checks.yml  esp-lint.yml  formatting.yml  libs-checks.yml  libs-test.yml  lint.yml
.zed/: tasks.json
components/app/: CMakeLists.txt  app.c
components/app/include/: app.h
components/common/: CMakeLists.txt  ringbuf.c
components/common/include/common/: log.h  sugar.h
libs/: compile_commands.json
libs/common/: CMakeLists.txt
libs/common/include/common/: hash.h  ringbuf.h
libs/common/tests/: CMakeLists.txt  test_hash.c
libs/unity/: CMakeLists.txt
libs/unity/cmake/: AddUnityTest.cmake
main/: CMakeLists.txt  idf_component.yml  main.c
tests/host/: CMakeLists.txt
tests/host/cmake/: AddUnityTest.cmake
